# Antyx-OS

./: .gitignore  FILELIST.txt  LICENSE  README.md  SECURITY.md  cosign.pub
.github/workflows/: build.yml  iso.yml  pages.yml
antyx-hub/: .gitignore  LICENSE  README.md
antyx-hub/src/: app.js  index.html  styles.css
antyx-hub/src-tauri/: Cargo.toml  tauri.conf.json
antyx-hub/src-tauri/capabilities/: default.json
antyx-hub/src-tauri/src/: lib.rs  main.rs
branding/: BRAND-GUIDE.md
docs/: 01-START.md  BRANDING.md  CHANGELOG-0.4.md  SIGNING.md  TESTPLAN.md  UPSTREAM.md
files/system/etc/: issue  issue.net
files/system/etc/plymouth/: plymouthd.conf
files/system/etc/sddm.conf.d/: 20-antyx-theme.conf  99-antyx-theme.conf
files/system/etc/sysctl.d/: 60-antyx-security.conf
files/system/etc/xdg/autostart/: antyx-first-login.desktop
files/system/usr/libexec/: antyx-branding-cleanup  antyx-fastfetch  antyx-first-login
files/system/usr/share/applications/: antyx-documentation.desktop  antyx-hub.desktop  bazzite-documentation.desktop
files/system/usr/share/color-schemes/: Antyx.colors
files/system/usr/share/fastfetch/presets/: antyx.jsonc
files/system/usr/share/plymouth/themes/antyx/: antyx.plymouth  antyx.script
files/system/usr/share/sddm/themes/antyx/: Main.qml  metadata.desktop
files/system/usr/share/ublue-os/motd/: bazzite.md
recipes/: recipe.yml
scripts/: install-antyx-hub.sh
website/: README.md  app.js  index.html  style.css
