[package]
name = "antyx-hub"
version = "0.1.0"
description = "Native control center for Antyx-OS"
authors = ["Antyx-OS contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "antyx_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "antyx-hub"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
